Add Post and Delete to VehicleResource. Implement logic in VehicleService to either create or delete Vehicle from repository. Create Json Annotation, to be used when serializing or deserializing. Format VehicleCreator. Prepare RestTemplate to deal with more than one API, depending on interface provided. Add VinDecoderApi interface. Add codec and mapstruct to gradle. Create first Mapper with mapstruct, for Vehicle.

--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,9 @@ dependencies {
 	}
 	implementation 'org.mapstruct:mapstruct:1.4.0.CR1'
 	annotationProcessor 'org.mapstruct:mapstruct-processor:1.4.0.CR1'
+	implementation 'commons-codec:commons-codec:1.13'
+	implementation('org.springframework.boot:spring-boot-starter-web')
+
 }
 
 test {
