--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@ plugins {
 	id 'io.spring.dependency-management' version '1.0.10.RELEASE'
 	id 'java'
 	id "org.sonarqube" version "2.7"
+	id "io.swagger.core.v3.swagger-gradle-plugin" version "2.1.4"
 }
 
 group = 'com.automotive'
@@ -17,6 +18,7 @@ configurations {
 
 repositories {
 	mavenCentral()
+	jcenter()
 }
 
 dependencies {
@@ -32,6 +34,11 @@ dependencies {
 	annotationProcessor 'org.mapstruct:mapstruct-processor:1.4.0.CR1'
 	implementation 'commons-codec:commons-codec:1.13'
 	implementation('org.springframework.boot:spring-boot-starter-web')
+	implementation "io.springfox:springfox-boot-starter:3.0.0"
+	compile 'io.springfox:springfox-swagger-ui:3.0.0'
+	implementation 'org.openapitools:jackson-databind-nullable:0.2.1'
+
+
 
 }
 
